k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "test-argo-fix"
  labels:
    name: "test-argo-fix"
    app.kubernetes.io/name: "test-argo-fix"
    app.kubernetes.io/managed-by: argocd
