k8s/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "test-argo-fix"
  namespace: "test-argo-fix"
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: "testargofix"
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
