k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "test-argo-fix"
  namespace: "test-argo-fix"
  labels:
    app: "testargofix"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  selector:
    app: "testargofix"
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
