k8s/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-argo-fix"
  namespace: "test-argo-fix"
spec:
  tls:
  - hosts:
    - "test-argo-fix.example.com"
    secretName: "prod-test-argo-fix-tls"
  rules:
  - host: "test-argo-fix.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "test-argo-fix"
            port:
              number: 80
